FIX horizontal scroll in Kanban #123

--- a/src/styles/TaskKanban.module.css
+++ b/src/styles/TaskKanban.module.css
@@ -3,7 +3,7 @@ https://codeburst.io/how-to-create-horizontal-scrolling-containers-d8069651e9c6 
 .KanbanContainer{
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center;
+    /* justify-content: center; */
     overflow-x: auto;
     /* smooth "overflow scrolling" on iOS */
     -webkit-overflow-scrolling: touch;
